--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ header nav a {
   text-decoration: none;
 
 }
+/*when scrolling the header shrinks*/
 header nav a:hover {
   border-top: 2px dotted black;
   border-bottom: 2px dotted black;
