--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ header {
   height: 150px;
   top: 0;
   left: 0;
-  background-color: white;
+  background-image: scr('black_lozenge.png');
   border-bottom: 3px solid rgba(0, 0, 0, 0.4);
   -webkit-transition: height 0.3s;
 }
