--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,9 @@ header.minimized h1 {
 }
 /*rotating letters*/
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Dosis:200,400,600);
-
+body {
+  background-color: #252527;
+}
 
 .h1 {
   font-family: Dosis;
