--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ header .container {
 header h1 {
   margin-top: 0;
   text-decoration: none;
+  font-size: 70px;
+  font-family: 'Titillium Web', sans-serif;
+  text-decoration: none;
+
 
 }
 header h1, header nav {
@@ -32,7 +36,6 @@ header h1, header nav {
 
 }
 header a {
-  text-decoration: none;
   color: black;
   text-decoration: none;
 
@@ -178,5 +181,8 @@ strong {
      	position: fixed;
      	font-size: 5px;
 
+    }
+    .container{
+    	width: 70%;
     }
 }
