--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ header {
   height: 150px;
   top: 0;
   left: 0;
-  background-image: url(../image/escheresque_ste.png);
+ /* background-image: url(../image/escheresque_ste.png);*/
   -webkit-transition: height 0.3s;
 }
 header .container {
@@ -75,7 +75,7 @@ header.minimized h1 {
 .container {
   height: 1500px;
 }
-#aboutmebox{
+.aboutmebox{
     text-align: center;
     background-color:azure;
     color:black;
@@ -92,7 +92,8 @@ header.minimized h1 {
 
 }
 .line{
-	border-bottom: 10px solid white;
+	border-bottom: 5px solid white;
+	width: 500px;
 }
 /*rotating letters*/
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Dosis:200,400,600);
