--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,7 @@ header.minimized h1 {
 .container {
   height: 1500px;
 }
+/*my main box for my columns*/
 .divbox{
     text-align: center;
     background-color:azure;
@@ -86,11 +87,12 @@ header.minimized h1 {
     background-image: url(../image/black_lozenge.png);
 
 }
-
+/*to fill in empy space*/
 .filler{
 	height: 720px;
 
 }
+/*the border line  under neath the rotating text*/
 .line{
 	border-bottom: 5px solid white;
 	width: 500px;
@@ -182,21 +184,10 @@ strong {
      	position: fixed;
      	font-size: 5px;
 
+
     }
     .container{
     	width: 70%;
     }
-    .divbox{
-    text-align: center;
-    background-color:azure;
-    color:white;
-    width:100%;
-    font-size: auto;
-    box-shadow: 0 -1px 5px 0 rgba(0,0,0,0.5);
-    padding:35px 10% 35px 10%;
-    font-size: 1.6em;
-    height: 600px;
-    background-image: url(../image/black_lozenge.png);
-
-}
+   
 }
