--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ header.minimized h1 {
     padding:35px 10% 35px 10%;
     font-size: 1.6em;
     height: 600px;
-    background-image: url(../image/black_lozenge.png);
+    background-image: url(../image/dark_mosaic.png);
 
 }
 /*to fill in empy space*/
