trying to fix images

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,8 +1,9 @@
 
 
 img {
-  max-width: 75%;
+  max-width: 100%;
   display: inline-block;
+
 }
 
 .image {
@@ -23,6 +24,7 @@ img {
   -webkit-transition: all ease-in-out 0.25s;
   -o-transition: all ease-in-out 0.25s;
   transition: all ease-in-out 0.25s;
+  display: inline-block;
 }
 .image:hover span {
   opacity: 0;
