--- a/css/main.css
+++ b/css/main.css
@@ -183,11 +183,15 @@ strong {
      header{
      	position: fixed;
      	font-size: 5px;
+     	text-align: center;
 
 
     }
     .container{
     	width: 70%;
+    }
+    .divbox{
+    	font-size: 8px;
     }
    
 }
