--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ body {
 
 header {
   font-family: sans-serif;
+
   width: 100%;
   height: 150px;
   top: 0;
@@ -47,10 +48,10 @@ header nav {
 header nav a {
   margin-left: 5px;
   text-decoration: none;
-
 }
+/*does not work*/
 /*when scrolling the header shrinks*/
-header nav a:hover {
+/*header nav a:hover {
   border-top: 2px dotted white;
   border-bottom: 2px dotted white;
   text-decoration: none;
@@ -69,7 +70,7 @@ header.minimized nav {
 header.minimized h1 {
   font-size: 1.7em;
 }
-
+*/
 .container {
   height: 1500px;
 }
