--- a/css/location.css
+++ b/css/location.css
@@ -1,57 +1,75 @@
-a {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  z-index: 1;
-  width: 36px;
-  height: 36px;
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300");
+@import url("http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  padding: 11px 0 0 9px;
-  border-radius: 50%;
-  border: 1px solid rgba(0,40,60,.2);
-  tap-highlight-color: transparent;
 }
-span {
-  display: block;
-  width: 16px;
-  height: 2px;
-  background: rgb(0,40,60);
-  transition: .7s;
-  pointer-events: none;
+
+html, body {
+  height: 100%;
 }
-span:nth-child(2) {
-  margin: 3px 0;
+
+body {
+  font: 12px/1 'Open Sans', sans-serif;
+ 
+  overflow-x: hidden;
 }
-.open {
-  border-color: rgba(255,255,255,.2);
+
+.wrapper {
+  display: flex;
+  min-height: 100%;
 }
-.open span {
-  background: #fff;
-}
-.open :first-child {
-  transform: translateY(5px) rotate(-45deg);
-}
-.open :nth-child(2) {
-  transform: rotate(-45deg);
+
+input[data-function*='swipe'] {
+  position: absolute;
   opacity: 0;
 }
-.open :last-child {
-  transform: translateY(-5px) rotate(-135deg);
-}
-nav {
+
+label[data-function*='swipe'] {
   position: absolute;
-  width: 200px;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  background: rgb(0,40,60);
-  transform: translateX(-100%);
-  transition: .5s;
+  top: 30px;
+  left: 30px;
+  z-index: 1;
+  display: block;
+  width: 42px;
+  height: 42px;
+  font: 42px/42px fontawesome;
+  text-align: center;
+  color: #444;
+  cursor: pointer;
+  transform: translate3d(0, 0, 0);
+  transition: transform .3s;
 }
-.open + nav {
-  transform: none;
+
+input[data-function*='swipe']:checked ~ label[data-function*='swipe'] {
+  transform: translate3d(260px, 0, 0);
 }
-code {
-  color: transparent;
-  font-size: 0;
+
+.content {
+  flex: 1;
+  padding: 80px 30px;
+  
+  box-shadow: 0 0 5px black;
+  transform: translate3d(0, 0, 0);
+  transition: transform .3s;
+}
+
+input[data-function*='swipe']:checked ~ .content {
+  transform: translate3d(260px, 0, 0);
+}
+
+.sidebar {
+  position: absolute;
+  width: 260px;
+}
+
+h1, h2 {
+  margin: 30px 0;
+  font-size: 45px;
+  font-weight: 300;
+}
+
+h2 {
+  font-size: 30px;
 }
